# hs-amazon-products

./: LICENSE  amazon-product.cabal  amazon-products.cabal
repl/: Main.hs
src/: Amazon.hs
src/Amazon/: Item.hs  Types.hs  Utils.hs
src/Amazon/Types/: Item.hs
