
name:                amazon-products
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010
    -- exposed-modules:
    build-depends:      base >=4.6 && <4.7
